# Greaper

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CodeStyle.md  Greaper.sln  README.md
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  CoreLnx.vcxproj  CoreWin.vcxproj  CoreWin.vcxproj.filters
Core/Private/Core/: Application.cpp  Application.h  CommandManager.cpp  CommandManager.h  GreaperCoreDLL.cpp  GreaperCoreDLL.h  ImplPrerequisites.h  LogManager.cpp  LogManager.h  ThreadManager.cpp  ThreadManager.h
Core/Public/Core/: Concurrency.h  CorePrerequisites.h  Enumeration.h  Event.h  FileStream.h  IApplication.h  ICommandManager.h  ICrashManager.h  IDeferredCallManager.h  IGreaperLibrary.h  ILogManager.h  IObject.h  IObjectFactory.h  IThreadManager.h  ITimeManager.h  IWindowManager.h  Interface.h  Library.h  MPMCTaskScheduler.h  Memory.h  MemoryStream.h  PHAL.h  Platform.h  Property.h  Result.h  Stream.h  StringUtils.h  Uuid.h
Core/Public/Core/Base/: BasicTypeInfo.h  BasicTypes.h  Config.h  DisplayAdapter.h  GreaperEntryPoint.h  ICommand.h  IConsole.h  ILogWriter.h  IThread.h  IThreadPool.h  IWindow.h  LogWriterFile.h  MPMCTaskScheduler.inl  MemoryStream.inl  Monitor.h  PropertyValidator.h  Range.h  RangeProtected.h  Rect.h  ReflectedConversions.h  SPtr.h  Span.h  Stream.inl  Task.h  TaskScheduler.h  ThreadPool.h  UPtr.h  Utils.h  Uuid.inl  VideoMode.h  WPtr.h
Core/Public/Core/Lnx/: LnxLibrary.h  LnxPlatform.h  LnxPlatform.inl  LnxThreadImpl.inl  LnxThreading.h  Prerequisites.h
Core/Public/Core/Reflection/: ReflectedField.h  ReflectedPlainContainer.h  ReflectedPlainField.h  ReflectedPlainType.h  ReflectedProperty.h  ReflectedTypeInfo.h
Core/Public/Core/Win/: MinWinHeader.h  Prerequisites.h  Win32Base.h  WinLibrary.h  WinPlatform.h  WinPlatform.inl  WinThreadImpl.inl  WinThreading.h
TestApplication/: CMakeLists.txt  Manifest.xml  TestApplication.cpp  TestApplication.vcxproj  TestApplicationLnx.vcxproj  TestApplicationWin.vcxproj  TestApplicationWin.vcxproj.filters  TestComplexType.cpp  TestGreaper.cpp  TestMath.cpp  TestWayland.cpp
src/: CoreLnx.vcxproj  CoreWin.vcxproj  CoreWin.vcxproj.filters  DispWin.vcxproj
src/Private/Core/: Application.cpp  Application.h  CommandManager.cpp  GreaperCoreDLL.cpp  GreaperCoreDLL.h  LogManager.cpp  LogManager.h  ThreadManager.cpp
src/Private/Display/: GLFWWindow.h  GreaperDisplayDLL.cpp  GreaperDisplayDLL.h  ImplPrerequisites.h  MiniSDL.h  WindowManager.cpp  WindowManager.h
src/Public/Core/: Concurrency.h  CorePrerequisites.h  Enumeration.h  Event.h  FileStream.h  IGreaperLibrary.h  IWindowManager.h  Interface.h  Library.h  MPMCTaskScheduler.h  Memory.h  PHAL.h  Platform.h  Property.h  Result.h  StringUtils.h  Uuid.h
src/Public/Core/Base/: FileStream.inl  GetCategoryType.inl  IGreaperLibrary.inl  ILogWriter.h  IWindow.h  MPMCTaskScheduler.inl  MemoryStream.inl  Monitor.h  Platform.inl  Property.inl  PropertyValidator.h  Rect.h  ReflectedConversions.h  SPtr.h  TypeTraits.h  UPtr.h  Utils.h  Uuid.inl  VideoMode.h  WPtr.h
src/Public/Core/Lnx/: LnxPlatform.h  LnxPlatform.inl
src/Public/Core/Reflection/: BaseType.h  ComplexType.h  ContainerType.h  IField.h  PlainType.h  Property.h  Rect.h  ReflectedPlainEnum.h  ReflectedPlainField.h  ReflectedPlainType.h  ReflectedReflField.h
src/Public/Core/Win/: Prerequisites.h  Win32Base.h  Win32PSAPI.h  Win32SysInfo.h  WinPlatform.h  WinPlatform.inl  WinThreadImpl.inl
src/Public/Display/: DispPrerequisites.h  IWindowManager.h
src/Public/Display/Base/: DisplayAdapter.h  IWindow.h  Monitor.h  VideoMode.h
src/Public/Math/: Line2.h  Line3.h  MathPrerequisites.h  Matrix2.h  Matrix3.h  Matrix4.h  Quaternion.h  Rect.h  Segment2.h  Segment3.h  Vector2.h  Vector3.h  Vector4.h
src/Public/Math/Base/: Half.h  IntersectionResult.h  Intersections.inl  ReflectedConversions.h  SSE.inl  Utils.inl  VecRef.h  Vector2Real.inl  Vector2Signed.inl  Vector2Unsigned.inl  Vector2b.inl  Vector3Real.inl  Vector3Signed.inl  Vector3Unsigned.inl  Vector3b.inl  Vector4Real.inl  Vector4Signed.inl  Vector4Unsigned.inl  Vector4b.inl
src/Public/Math/Reflection/: Matrix2.h  Matrix3.h  Matrix4.h  Quaternion.h  Rect.h  Vector2.h  Vector3.h  Vector4.h
